// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkCalendar should render correctly 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'multiple'} 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="multiple"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'range'} 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="range"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly for selectionType={'single'} 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with arbitrary props 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
  testID="123"
/>
`;

exports[`iOS BpkCalendar should render correctly with both minDate and maxDate 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={2020-05-18T23:00:00.000Z}
  minDate={2019-05-18T23:00:00.000Z}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with custom style 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`iOS BpkCalendar should render correctly with maxDate 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={2020-05-18T23:00:00.000Z}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with minDate 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={2019-05-18T23:00:00.000Z}
  onDateSelection={[Function]}
  selectedDates={Array []}
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with selection type "multiple" and selected dates 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={
    Array [
      2019-05-18T23:00:00.000Z,
      2019-05-20T23:00:00.000Z,
      2019-05-28T23:00:00.000Z,
    ]
  }
  selectionType="multiple"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with selection type "range" and selected dates 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={
    Array [
      2019-05-18T23:00:00.000Z,
      2019-05-20T23:00:00.000Z,
    ]
  }
  selectionType="single"
  style={null}
/>
`;

exports[`iOS BpkCalendar should render correctly with selection type "single" and selected dates 1`] = `
<RCTBPKCalendar
  locale="en_GB"
  maxDate={null}
  minDate={null}
  onDateSelection={[Function]}
  selectedDates={
    Array [
      2019-05-18T23:00:00.000Z,
    ]
  }
  selectionType="single"
  style={null}
/>
`;
